Update Java15 information